--- a/index.html
+++ b/index.html
@@ -12,13 +12,41 @@
     </header>
 
     <main>
-        <input type="text" placeholder="Name">
-        <button>Pesquisar</button>
+        <section>
+            <input type="text" placeholder="Name">
+            <button>Pesquisar</button>
+        </section>
+        <section class="resultados-pesquisa">
+            <div class="item-resultado">
+            <h2>
+                <a href="#"  target="_blank">HTML</a>
+            </h2>
+            <p class="descricao-meta">Tags HTML são os blocos de construção fundamentais de uma página da web. Elas são como instruções que você dá ao navegador para definir a estrutura e o conteúdo de uma página. Imagine que você está montando um quebra-cabeça, cada peça representa uma tag. Ao encaixar as peças, você cria uma imagem completa.</p>
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">Mais informações</a>
+            </div>
+
+            <div class="item-resultado">
+                <h2>
+                    <a href="#" target="_blank">CSS</a>
+                </h2>
+                <p class="descricao-meta">CSS é a linguagem de estilos utilizada para definir a aparência visual de um documento HTML. Com CSS, você pode controlar cores, fontes, layout, e muito mais.</p>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">Mais informações</a>
+            </div>
+            
+            <div class="item-resultado">
+                <h2>
+                    <a href="#" target="_blank">JavaScript</a>
+                </h2>
+                <p class="descricao-meta">JavaScript é uma linguagem de programação que adiciona interatividade a páginas da web. Com JavaScript, você pode criar animações, validar formulários, e muito mais.</p>
+                <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank">Mais informações</a>
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>2024 - Mundo HTML. Todos os direitos reservados</p>
         <p>Entre em contato</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
