--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <p>2024 - Mundo HTML. Todos os direitos reservados</p>
         <p>Entre em contato</p>
     </footer>
+    <script src="dados.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
