--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imersão Dev Gemini</title>
+    <title>Quia Tecnologias Web</title>
     <link rel="shortcut icon" type="imagens/icon" href="./Imagens/local-na-rede-internet.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -31,9 +31,36 @@
     <section id="resultados-pesquisa" class="resultados-pesquisa"></section>
 </main>
 
-<footer>
-    <p>2024 - Mundo HTML. Todos os direitos reservados</p>
-    <p>Entre em contato</p>
+<footer class="rodape">
+    <section class="container-rodape">
+        <section class="container-conteudo">
+            <h3 class="rodape-titulo">Minhas Redes</h3>
+                <ul class="rodape-lista">
+                    <li class="lista-item"><a class="rodape-ancora" id="ancora-mouse" href="https://www.linkedin.com/in/jeronimo-s-rodrigues-dev/" title="Linkedin"><img src="/Imagens/Icones/linkedin.png" alt="Rede Social Linkedin">Linkedin</a></li>
+                    <li class="lista-item"><a class="rodape-ancora" id="ancora-mouse" href="https://github.com/JeronimoSantos" title="GitHub"><img src="/Imagens/Icones/github.png" alt="Rede Social GitHub">GitHub</a></li>
+                    <li class="lista-item"><a class="rodape-ancora" id="ancora-mouse" href="https://www.instagram.com/jeronimo_santos_oficial/"  title="Instagram"><img src="/Imagens/Icones/instagram.png" alt=" Rede Social Instagram">Instagram</a></li>
+                </ul>
+        </section>
+        
+        <section class="container-conteudo">
+            <h3 class="rodape-titulo">Créditos</h3>
+            <ul class="rodape-lista">
+                <li class="lista-item"><a class="rodape-ancora2" id="ancora-mouse" href="https://iconscout.com/" target="_blank" title="Site de Icones">Iconscout</a></li>
+                <li class="lista-item"><a class="rodape-ancora2" id="ancora-mouse" href="https://www.flaticon.com/br/" target="_blank" title="Site de Icones">Flaticon</a></li>
+                <li class="lista-item"><a class="rodape-ancora2" id="ancora-mouse" href="https://goo.gle/AluraGemini" target="_blank" title="Inteligência Artificial do Google">Alura Gemini</a></li>
+            </ul>
+        </section>
+
+        <section class="container-conteudo">
+            <h3 class="rodape-titulo">Entre em contato</h3>
+            <ul class="rodape-lista">
+                <li class="lista-item"><a class="rodape-ancora3" id="ancora-mouse" href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=new" target="_blank" title="Gmail"><img src="/Imagens/Icones/gmail.png" alt="Rede Social Gmail">Gmail</a></li>
+            </ul>
+        </section>
+        </section>
+    </section>
+
+    <p class="rodape-paragrafo">Desenvolvido por Jerônimo S.Rodrigues.</p>
 </footer>
 
 <script src="dados.js"></script>
